<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">UserInputOrderCoffee</string>
    <string name="CoffeeOrder">CoffeeMall</string>
    <string name="hint_name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>
    <string name="order_summary">Order Summary</string>
    <string name="order">order</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="initial_quantity">3</string>
    <string name="initial_price">10</string>
    <string name="total_price">total</string>
</resources>

