<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/name_edit_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="text|textCapWords" />

    <TextView
        android:id="@+id/textView"
        style="@style/textHead"
        android:layout_marginTop="16dp"
        android:text="@string/toppings"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/whipped_cream_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/whipped_cream"
        android:textSize="20sp" />

    <CheckBox
        android:id="@+id/chocolate_checkbox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chocolate"
        android:textSize="20sp" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="decrement"
            android:text="@string/minus" />

        <TextView
            android:id="@+id/quantity_text_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/initial_quantity"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button3"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:onClick="increment"
            android:text="@string/plus" />

    </LinearLayout>


    <TextView
        android:id="@+id/textView2"
        style="@style/textHead"
        android:layout_marginTop="16dp"
        android:text="@string/order_summary"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/order_summary_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/initial_price"
        android:textSize="20sp" />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:onClick="submitOrder"
        android:text="@string/order" />


</LinearLayout>